# phantom-spire

./: .env.example  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  32_PRECISION_MODULES_COMPLETE.md  BUILD_STATUS_SUMMARY.md  CENTRALIZED_SERVICE_CENTER_ARCHITECTURE.md  COST_SYSTEMS_ARCHITECTURE.md  CYBER_THREAT_PROGRAM_IMPLEMENTATION.md  Cargo.toml  DATA_LAYER_ALIGNMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  ENHANCED_NAPI_INTEGRATION.md  ENHANCED_NAPI_INTEGRATION_COMPLETE.md  ENTERPRISE_INTEGRATION_README.md  ENTERPRISE_STANDARDIZATION_COMPLETE.md  ERROR_BOUNDARY_PLATFORM_IMPLEMENTATION.md  ESB_SERVICE_MESH_ARCHITECTURE.md  EVIDENCE_ARCHITECTURE.md  FORTUNE_100_SERVICE_CENTER_COMPLETION.md  H2O_COMPETITIVE_ANALYSIS.md  INSTALLATION.md  MESSAGE_QUEUE_ARCHITECTURE.md  MIGRATION_SUMMARY.md  MODERNIZATION_PLATFORM_IMPLEMENTATION.md  NETWORK_MANAGEMENT_IMPLEMENTATION.md  PHANTOM_ML_CORE_EXTENSION_COMPLETE.md  PHANTOM_ML_CORE_TEST_REPORT.md  PHANTOM_SECOP_ENHANCEMENT_SUMMARY.md  PHANTOM_THREATACTOR_CORE_IMPLEMENTATION.md  QUICKSTART.md  README.md  README_XDR_NATIVE.md  REPORT_IMPLEMENTATION_SUMMARY.md  REVOLUTIONARY_GENERIC_MODULES.md  SECURITY.md  STANDARDIZATION_TEMPLATE_ALL_MODULES.md  THREAT_INTELLIGENCE_BUSINESS_LOGIC_GUIDE.md  (+64 more)
.changeset/: config.json
.claude/: settings.local.json
.github/: SECURITY.md  pull_request_template.md
.husky/: pre-push
deployment/: docker-compose.enterprise.yml
docs/: ARCHITECTURE.md  AUTOML_TEST_SUITE_DOCUMENTATION.md  CONTRIBUTING.md  GOVERNANCE.md  INTEGRATION.md  NAPI_API_REFERENCE.md  NAPI_COMPLETE_DOCUMENTATION_SUMMARY.md  NAPI_INSTALLATION_GUIDE.md  NAPI_INTEGRATION_PATTERNS.md  NAPI_MODULES_DOCUMENTATION.md  NAPI_TESTING_GUIDE.md  NAPI_TROUBLESHOOTING.md  README.md  STANDARDIZATION_EXAMPLES.md  cve-plugin-setup.md
frontend/: GEMINI.md  next.config.enterprise.ts  package-lock.json  package.json
frontend/phantom-intel-core/: Cargo.toml  GEMINI.md  package-lock.json  package.json  tsconfig.json
frontend/phantom-intel-core/src/: lib.rs
frontend/phantom-intel-core/src-ts/: index.ts  types.ts
frontend/phantom-intel-core/src-ts/business-saas/: BusinessSaaSIntelCore.ts
frontend/phantom-intel-core/src-ts/business-saas/config/: BusinessSaaSConfig.ts
frontend/phantom-intel-core/src-ts/business-saas/services/: AnalyticsEngine.ts
frontend/phantom-ioc-core/: Cargo.toml  ENTERPRISE_README.md  GEMINI.md  README.md  enterprise-demo.mjs  package-lock.json  package.json  tsconfig.json
frontend/phantom-ioc-core/examples/: basic_usage.rs
frontend/phantom-ioc-core/src/: analysis.rs  analytics.rs  api.rs  audit.rs  compliance.rs  context.rs  correlation.rs  data_stores.rs  detection.rs  export.rs  incident_response.rs  integration.rs  intelligence.rs  lib-test.rs  lib.rs  lib_enterprise.rs  lib_old.rs  notification.rs  performance_monitoring.rs  persistence.rs  reporting.rs  reputation.rs  risk_assessment.rs  simple_modules.rs  threat_hunting.rs  types.rs  user_management.rs  validation.rs  workflow_automation.rs
frontend/phantom-ioc-core/src-ts/: index.ts  types.ts
frontend/phantom-ioc-core/src/modules/: alert_management.rs  asset_management.rs  compliance.rs  dashboard_analytics.rs  forensics.rs  incident_response.rs  integration.rs  mod.rs  network_security.rs  reporting.rs  risk_assessment.rs  threat_hunting.rs  user_activity.rs
frontend/phantom-mitre-core/: Cargo.toml  EXTENDED_MODULES.md  GEMINI.md  package-lock.json  package.json
frontend/phantom-mitre-core/src/: lib.rs
frontend/phantom-mitre-core/src-ts/: datastore.ts  types.ts
frontend/phantom-mitre-core/src/data_stores/: config.rs  elasticsearch_store.rs  mod.rs  mongo_store.rs  redis_store.rs  traits.rs
frontend/phantom-mitre-core/src/modules/: attack_path_analyzer.rs  campaign_tracker.rs  indicator_enrichment.rs  risk_assessment_calculator.rs  threat_detection_engine.rs  threat_hunting_assistant.rs  vulnerability_correlator.rs
frontend/phantom-secop-core/: Cargo.toml  ENHANCED_FEATURES.md  GEMINI.md  README.md  api-demo.mjs  config.example.json  package-lock.json  package.json  tsconfig.json
frontend/phantom-secop-core/src/: lib.rs
frontend/phantom-secop-core/src-ts/: types.ts
frontend/phantom-secop-core/src/stores/: elasticsearch.rs  memory.rs  mod.rs  mongodb.rs  postgres.rs  redis.rs
frontend/phantom-threatActor-core/: .gitignore  Cargo.toml  package-lock.json  package.json
frontend/phantom-threatActor-core/src/: advanced_attribution.rs  campaign_lifecycle.rs  compliance_reporting.rs  executive_dashboard.rs  geographic_analysis.rs  incident_response.rs  industry_targeting.rs  intelligence_sharing.rs  lib.rs  risk_assessment.rs  threat_hunting.rs  threat_landscape.rs
frontend/phantom-threatActor-core/src-ts/: index.ts
frontend/phantom-xdr-core/: Cargo.toml  GEMINI.md  README.md  package-lock.json  package.json
frontend/phantom-xdr-core/.cargo/: config.toml
frontend/phantom-xdr-core/src/: api_security.rs  behavioral_analytics.rs  cloud_security.rs  container_security.rs  correlation.rs  crypto.rs  data_loss_prevention.rs  detection.rs  forensics_investigation.rs  incident_response.rs  insider_threat.rs  lib.rs  ml_engine.rs  mobile_security.rs  network_analysis.rs  network_segmentation.rs  orchestration_automation.rs  response.rs  risk_assessment.rs  security_awareness.rs  threat_intelligence.rs  types.rs  vulnerability_management.rs  vulnerability_scanning.rs  zero_day_protection.rs  zero_trust.rs
generic/: README.md  package-lock.json  package.json  test.js  tsconfig.json
sandbox/: GEMINI.md  package-lock.json  package.json
scripts/: analyze-system.ts  apply-enterprise-standards.ps1  cve-dashboard-demo.html  demo-cve-core.mjs  demo-enterprise-cve-standardization.mjs  demo-reputation-core.mjs  docker-entrypoint.sh  enhanced-install.sh  evaluate-installation.ts  fix-cargo-dependencies.ps1  fix-json-syntax.ps1  init-database.ts  install-enterprise.sh  run-enterprise-demo.js  soa-demo.mjs  standardize-phantom-packages.ps1  test-organizational-models.js  validate-enterprise-standardization.mjs  validate-enterprise-standards.mjs  (+2 more)
(+3491 files in other folders)
