[package]
name = "phantom-xdr-native"
version = "1.0.0"
edition = "2021"
description = "High-performance native XDR modules for Phantom Spire"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["full"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
rayon = "1.10"
dashmap = "6.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true