[package]
name = "phantom-intel-core"
version = "1.0.0"
edition = "2021"
description = "Advanced Threat Intelligence engine for comprehensive intelligence gathering, analysis, and correlation"
license = "MIT"
authors = ["Phantom Spire Security"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
base64 = "0.21"
sha2 = "0.10"
indexmap = { version = "2.0", features = ["serde"] }
url = "2.0"
ipnetwork = "0.20"
cidr = "0.2"
maxminddb = "0.23"
trust-dns-resolver = "0.23"
whois-rust = "0.1"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  "serde-serialize",
]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[features]
default = ["console_error_panic_hook"]
