[package]
name = "phantom-intel-core"
version = "1.0.0"
edition = "2021"
description = "Advanced Threat Intelligence engine for comprehensive intelligence gathering, analysis, and correlation"
license = "MIT"
authors = ["Phantom Spire Security"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
base64 = "0.21"
sha2 = "0.10"
indexmap = { version = "2.0", features = ["serde"] }
url = "2.0"
ipnetwork = "0.20"
cidr = "0.2"
maxminddb = "0.23"
trust-dns-resolver = "0.23"
whois-rust = "1.6"

[build-dependencies]
napi-build = "2.1.0"
