[package]
name = "phantom-ioc-core"
version = "0.1.0"
description = "IOC processing core with threat intelligence"
edition = "2021"

[lib]
name = "phantom_ioc_core"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi6", "serde-json", "tokio_rt"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dashmap = "5.0"
futures = "0.3"
base64 = "0.21"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

[build-dependencies]
napi-build = "2.1.0"
