[package]
name = "phantom-ioc-core"
version = "0.2.0"
description = "IOC processing core with threat intelligence and 12 business-ready modules"
edition = "2021"

[lib]
name = "phantom_ioc_core"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
async-trait = "0.1"

[build-dependencies]
napi-build = "2.1.0"
