[package]
name = "phantom-mitre-core"
version = "1.0.0"
edition = "2021"
description = "Advanced MITRE ATT&CK framework integration and threat analysis system"
authors = ["Phantom Spire Security"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
rayon = "1.7"
dashmap = "5.5"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "mitre_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# WASM optimization
[profile.release.package.phantom-mitre-core]
opt-level = "s"
