[package]
name = "phantom-xdr-core"
version = "0.1.0"
license = "ISC"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi6", "serde-json", "tokio_rt"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
sha2 = "0.10"
aes-gcm = "0.10"
rust-crypto = "0.2"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
base64 = "0.21"
hex = "0.4"
ipnet = "2.9"
cidr = "0.2"
bloom = "0.3"
dashmap = "5.5"
lru = "0.12"
petgraph = "0.6"
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
libnode_rs = "0.0.2"

[build-dependencies]
napi-build = "2.1.0"
